manifests/13-llamacpp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llamacpp-serve
  namespace: codegen-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llamacpp-serve
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: llamacpp-serve
    spec:
      containers:
      - image: quay.io/ai-lab/granite-7b-lab
        imagePullPolicy: Always
        name: granite-container
        #lifecycle:
        #  postStart:
        #    exec:
        #      command: ["/bin/sh", "-c", "cp /model/model.file models/granite-7b-lab-Q4_K_M.gguf"]
        resources:
          requests:
            cpu: "2m" 
            memory: "5Mi" 
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /models
          name: llamacpp-storage
      - image: quay.io/ai-lab/llamacpp-python-cuda
        imagePullPolicy: Always
        name: llamacpp-container
        ports:
        - containerPort: 8001
          protocol: TCP
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "curl -sLO https://huggingface.co/instructlab/granite-7b-lab-GGUF/resolve/main/granite-7b-lab-Q4_K_M.gguf"]
        resources:
          limits:
            nvidia.com/gpu: "1"
          requests:
            nvidia.com/gpu: "1"
            cpu: "2m" # This process uses very little CPU when idle and about 800m when busy
            memory: "5Gi" # The granite-7b-lab model uses almost 5GB of RAM
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /models
          name: llamacpp-storage
        - mountPath: /config
          name: json-configmap-volume
      restartPolicy: Always
      volumes:
      - name: json-configmap-volume
        configMap:
          name: json-configmap
      - name: llamacpp-storage
        persistentVolumeClaim:
          claimName: llamacpp-storage
