manifests/14-llamacpp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: llamacpp-svc
  namespace: codegen-poc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8001
  selector:
    app: llamacpp-serve
  type: ClusterIP
