manifests/04-ollama-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ollama-route
spec:
  port:
    targetPort: 11434
  to:
    kind: Service
    name: ollama-svc
    weight: 100
  wildcardPolicy: None
